--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "material-ui-phone-number": "^3.0.0",
+    "pdfjs-dist": "^2.6.347",
     "react": "^17.0.2",
+    "react-cropper": "^2.1.8",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^12.0.2",
+    "react-pdf": "^5.7.1",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
