--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^12.0.2",
     "react-pdf": "^5.7.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
