--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.1",
+    "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.0",
     "@mui/x-data-grid": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.2",
