--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "material-ui-phone-number": "^3.0.0",
     "pdfjs-dist": "^2.6.347",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-cropper": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-dropzone": "^12.0.2",
